feat: modify local compose to work with only one Redis image

--- a/.env.example
+++ b/.env.example
@@ -55,11 +55,12 @@ RABBITMQ_URL=amqp://user:password@rabbitmq:5672/
 #=======================================
 # REDIS - Cache e Broker
 #=======================================
-# Senha para o Redis do serviço de notificação
-REDIS_PASSWORD=redis-password
 
 # URL de conexão para o Redis do serviço de finanças
-REDIS_URL=redis://redis-finance:6379/0
+REDIS_FINANCE_URL=redis://redis:6379/0
+
+# URL de conexão para o Redis do serviço de finanças
+REDIS_NOTIFICATION_URL=redis://redis:6379/8
 
 #=======================================
 # CELERY - Tarefas Assíncronas
