feat: parametrize Keycloak admin credentials

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ KEYCLOAK_DB=keycloak_db
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=password
 
+# Credenciais do administrador do Keycloak
+KEYCLOAK_ADMIN_USER=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
 # URLs para os serviços se comunicarem com o Keycloak (rodando localmente)
 KEYCLOAK_SERVER_URL=http://keycloak:8080
 KEYCLOAK_ISSUER=http://localhost:8080/realms/poupe-ai
