feat: define env variables to IP_ADDRESS and DJANGO_SUPERUSER

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@
 #=======================================
 # Tag a ser usada para as imagens de produção. Pode ser 'latest' ou um hash de commit.
 SERVICE_TAG=latest
+IP_ADDRESS=localhost
 
 #=======================================
 # KEYCLOAK - Servidor de Autenticação
@@ -72,6 +73,13 @@ REDIS_NOTIFICATION_URL=redis://redis:6379/8
 # Credenciais para a interface de monitoramento Flower
 CELERY_FLOWER_USER=admin
 CELERY_FLOWER_PASSWORD=admin
+
+#=======================================
+# FINANCE SERVICE - Serviço de Finanças
+#=======================================
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@email.com
+DJANGO_SUPERUSER_PASSWORD=admin
 
 #=======================================
 # NOTIFICATION SERVICE - Serviço de Notificação
