chore: change report service port to 8081 on kong configuration

--- a/.env.example
+++ b/.env.example
@@ -75,7 +75,7 @@ CELERY_FLOWER_USER=admin
 CELERY_FLOWER_PASSWORD=admin
 
 #=======================================
-# FINANCE SERVICE - Serviço de Finanças
+# FINANCE SERVICE - Serviço de Finanças (utilize apenas localmente)
 #=======================================
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@email.com
