--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ KEYCLOAK_ADMIN_PASSWORD=admin
 KEYCLOAK_SERVER_URL=http://keycloak:8080
 KEYCLOAK_ISSUER=http://localhost:8080/realms/poupe-ai
 KEYCLOAK_JWKS_URL=http://keycloak:8080/realms/poupe-ai/protocol/openid-connect/certs
+KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/poupe-ai
+KEYCLOAK_AUDIENCE=account
 
 # Segredos dos Clientes do Keycloak
 # Segredo para o provedor de identidade do Google
@@ -80,6 +82,17 @@ CELERY_FLOWER_PASSWORD=admin
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@email.com
 DJANGO_SUPERUSER_PASSWORD=admin
+
+#=======================================
+# REPORT SERVICE - Serviço de Relatórios
+#=======================================
+GEMINI_API_KEY=AI_KEY
+DEEPSEEK_API_KEY=AI_KEY
+REPORT_DB_CONNECTION_STRING=
+REPORT_DB_NAME=
+FINANCES_SERVICE_BASE_URL=http://finances-service:8000
+FINANCES_SERVICE_TRANSACTIONS_ENDPOINT=/api/v1/transactions/
+FINANCES_SERVICE_CATEGORY_ENDPOINT=/api/v1/categories/
 
 #=======================================
 # NOTIFICATION SERVICE - Serviço de Notificação
