--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -163,9 +163,7 @@ services:
 
   # --- SERVIÇOS DA APLICAÇÃO ---
   finances-service:
-    build:
-      context: ./services/poupeai-finance-service
-      dockerfile: ./compose/local/django/Dockerfile
+    image: franciscopaulino/poupeai-finance-service:latest
     container_name: finances-service-prod
     command: /start
     volumes:
@@ -184,9 +182,7 @@ services:
       - poupe-ai-network
 
   finances-celery-worker:
-    build:
-      context: ./services/poupeai-finance-service
-      dockerfile: ./compose/local/django/Dockerfile
+    image: franciscopaulino/poupeai-finance-service:latest
     container_name: finances-celery-worker-prod
     command: /start-celeryworker
     volumes:
@@ -202,9 +198,7 @@ services:
       - poupe-ai-network
 
   finances-celery-beat:
-    build:
-      context: ./services/poupeai-finance-service
-      dockerfile: ./compose/local/django/Dockerfile
+    image: franciscopaulino/poupeai-finance-service:latest
     container_name: finances-celery-beat-prod
     command: /start-celerybeat
     volumes:
@@ -220,9 +214,7 @@ services:
       - poupe-ai-network
   
   finances-celery-flower:
-    build:
-      context: ./services/poupeai-finance-service
-      dockerfile: ./compose/local/django/Dockerfile
+    image: franciscopaulino/poupeai-finance-service:latest
     container_name: finances-celery-flower-prod
     command: /start-flower
     volumes:
@@ -241,9 +233,7 @@ services:
       - poupe-ai-network
 
   notification-service:
-    build:
-      context: ./services/poupeai-notification-service
-      dockerfile: Dockerfile
+    image: franciscopaulino/poupeai-notification-service:latest
     container_name: notification-service-prod
     volumes:
       - ./services/poupeai-notification-service/src:/app
@@ -279,9 +269,7 @@ services:
       - poupe-ai-network
 
   reports-service:
-    build:
-      context: ./services/poupeai-report-service
-      dockerfile: Dockerfile
+    image: franciscopaulino/poupeai-report-service:latest
     container_name: reports-service-prod
     environment:
       ASPNETCORE_ENVIRONMENT: Development
