--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -285,6 +285,7 @@ services:
     container_name: reports-service-local
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_HTTP_PORTS: 8081
       GeminiAI__ApiKey: ${GEMINI_API_KEY}
       DeepseekAI__ApiKey: ${DEEPSEEK_API_KEY}
       Database__ConnectionString: ${REPORT_DB_CONNECTION_STRING}
