fix: remove sudo from docker compose up command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,6 @@ jobs:
             cd poupeai-infra
             
             echo "Aplicando configurações de infraestrutura..."
-            sudo docker compose -f docker-compose-production.yml up -d
+            docker compose -f docker-compose-production.yml up -d
             
             echo "Deploy de infraestrutura concluído."
