--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,9 @@ CELERY_FLOWER_PASSWORD=admin
 #=======================================
 # FINANCE SERVICE - Serviço de Finanças (utilize apenas localmente)
 #=======================================
+REPORTS_SERVICE_URL=http://reports-service:8081
+
+# Credenciais do superusuário Django para o serviço de finanças (utilize apenas localmente)
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@email.com
 DJANGO_SUPERUSER_PASSWORD=admin
