--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -14,6 +14,7 @@ x-django-common-env: &django-common-env
   KEYCLOAK_REALM_NAME: "poupe-ai"
   KEYCLOAK_ADMIN_CLIENT_ID: "poupe-ai-backend"
   KEYCLOAK_ADMIN_CLIENT_SECRET: ${KEYCLOAK_ADMIN_CLIENT_SECRET}
+  REPORTS_SERVICE_URL: ${REPORTS_SERVICE_URL}
   RABBITMQ_URL: ${RABBITMQ_URL}
   RABBITMQ_EXCHANGE_MAIN: ${RABBITMQ_EXCHANGE_MAIN}
   RABBITMQ_ROUTING_KEY: ${RABBITMQ_ROUTING_KEY}
