fix: fix REPORTS_SERVICE_URL env

--- a/.env.example
+++ b/.env.example
@@ -77,9 +77,9 @@ CELERY_FLOWER_USER=admin
 CELERY_FLOWER_PASSWORD=admin
 
 #=======================================
-# FINANCE SERVICE - Serviço de Finanças (utilize apenas localmente)
+# FINANCE SERVICE - Serviço de Finanças
 #=======================================
-REPORTS_SERVICE_URL=http://reports-service:8081
+REPORTS_SERVICE_URL=http://reports-service:8081/api/v1
 
 # Credenciais do superusuário Django para o serviço de finanças (utilize apenas localmente)
 DJANGO_SUPERUSER_USERNAME=admin
