--- a/logging/loki/loki-config.yaml
+++ b/logging/loki/loki-config.yaml
@@ -44,7 +44,8 @@ compactor:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
-  max_query_series: 5000
+  max_query_series: 100000
+  max_query_parallelism: 2
   max_query_lookback: 168h
   allow_structured_metadata: false
 
