feat: configure keycloak poupeai listener

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,11 @@ KEYCLOAK_JWKS_URL=http://keycloak:8080/realms/poupe-ai/protocol/openid-connect/c
 KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/poupe-ai
 KEYCLOAK_AUDIENCE=account
 
+# Configuração do Listener
+CORE_SERVICE_URL=http://host.docker.internal:8085/api/internal/profiles
+INTERNAL_API_KEY=chave-secreta
+INTERNAL_HEADER_NAME=x-api-key
+
 # Segredos dos Clientes do Keycloak
 # Segredo para o provedor de identidade do Google
 GOOGLE_CLIENT_ID=google-client-id
