chore: configure mailhog for local enviroment

--- a/.env.example
+++ b/.env.example
@@ -106,12 +106,12 @@ FINANCES_SERVICE_CATEGORY_ENDPOINT=/api/v1/categories/
 # NOTIFICATION SERVICE - Serviço de Notificação
 #=======================================
 # Configuração do servidor de e-mail (ex: Mailtrap, SendGrid, etc.)
-MAIL_USERNAME=your-smtp-username
-MAIL_PASSWORD=your-smtp-password
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_FROM=poupeai.notificacoes@gmail.com
 MAIL_FROM_NAME="Poupe.AI"
-MAIL_PORT=587
-MAIL_SERVER=smtp-relay.brevo.com
+MAIL_PORT=1025
+MAIL_SERVER=mailhog
 
 #=======================================
 # LOGGING - Grafana
