--- a/.env.example
+++ b/.env.example
@@ -1,111 +1,77 @@
-# --------------------------------------------------------------------------------
-# .env.example - Arquivo de Exemplo para Variáveis de Ambiente
-#
-# Copie este arquivo para .env (cp .env.example .env) e preencha com seus valores.
-# O arquivo .env NUNCA deve ser enviado para o repositório Git.
-# --------------------------------------------------------------------------------
-
 #=======================================
 # COMUM / GLOBAL
 #=======================================
-# Tag a ser usada para as imagens de produção. Pode ser 'latest' ou um hash de commit.
 SERVICE_TAG=latest
 IP_ADDRESS=localhost
+FINANCE_SERVICE_PORT=8085
+REPORTS_SERVICE_PORT=8081
 
 #=======================================
-# KEYCLOAK - Servidor de Autenticação
+# KEYCLOAK
 #=======================================
-# Banco de dados do Keycloak
 KEYCLOAK_DB=keycloak_db
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=password
-
-# Credenciais do administrador do Keycloak
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 
-# URLs para os serviços se comunicarem com o Keycloak (rodando localmente)
 KEYCLOAK_SERVER_URL=http://keycloak:8080
-KEYCLOAK_ISSUER=http://localhost:8080/realms/poupe-ai
+KEYCLOAK_ISSUER=http://${IP_ADDRESS}:8080/realms/poupe-ai
 KEYCLOAK_JWKS_URL=http://keycloak:8080/realms/poupe-ai/protocol/openid-connect/certs
 KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/poupe-ai
 KEYCLOAK_AUDIENCE=account
 
-# Configuração do Listener
-CORE_SERVICE_URL=http://host.docker.internal:8085/api/internal/profiles
+# Listener do Keycloak
+CORE_SERVICE_URL=http://finances-service:8000/api/internal/profiles
 INTERNAL_API_KEY=chave-secreta
 INTERNAL_HEADER_NAME=x-api-key
 
-# Segredos dos Clientes do Keycloak
-# Segredo para o provedor de identidade do Google
-GOOGLE_CLIENT_ID=google-client-id
-GOOGLE_CLIENT_SECRET=google-client-secret
-
-# Segredo do cliente "poupe-ai-backend" (usado pelos serviços)
-KEYCLOAK_ADMIN_CLIENT_SECRET=backend-client-secret
-POUPE_AI_BACKEND_CLIENT_SECRET=backend-client-secret # Repetido para compatibilidade, use o mesmo valor
+# Segredos
+GOOGLE_CLIENT_ID=google-id
+GOOGLE_CLIENT_SECRET=google-secret
+KEYCLOAK_ADMIN_CLIENT_SECRET=backend-secret
+POUPE_AI_BACKEND_CLIENT_SECRET=backend-secret
 
 #=======================================
-# FINANCE SERVICE - Serviço de Finanças
+# DATABASE & CACHE
 #=======================================
-# Banco de dados do Serviço de Finanças
 FINANCE_DB=poupeai_finance_db
 FINANCE_DB_USER=finance_user
 FINANCE_DB_PASSWORD=finance_user_password
 
-#=======================================
-# RABBITMQ - Message Broker
-#=======================================
-RABBITMQ_USER=guest
-RABBITMQ_PASSWORD=guest
-RABBITMQ_EXCHANGE_MAIN=notification_exchange
-RABBITMQ_ROUTING_KEY=notification.event
-
-# URL de conexão para os serviços (composta pelas variáveis acima)
-RABBITMQ_URL=amqp://user:password@rabbitmq:5672/
-
-#=======================================
-# REDIS - Cache e Broker
-#=======================================
-
-# URL de conexão para o Redis do serviço de finanças
 REDIS_FINANCE_URL=redis://redis:6379/0
-
-# URL de conexão para o Redis do serviço de finanças
 REDIS_NOTIFICATION_URL=redis://redis:6379/8
 
 #=======================================
-# CELERY - Tarefas Assíncronas
+# RABBITMQ
 #=======================================
-# Credenciais para a interface de monitoramento Flower
-CELERY_FLOWER_USER=admin
-CELERY_FLOWER_PASSWORD=admin
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672/
+RABBITMQ_EXCHANGE_MAIN=notification_exchange
+RABBITMQ_ROUTING_KEY=notification.event
 
 #=======================================
-# FINANCE SERVICE - Serviço de Finanças
+# SERVIÇOS
 #=======================================
 REPORTS_SERVICE_URL=http://reports-service:8081/api/v1
-
-# Credenciais do superusuário Django para o serviço de finanças (utilize apenas localmente)
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@email.com
 DJANGO_SUPERUSER_PASSWORD=admin
+CELERY_FLOWER_USER=admin
+CELERY_FLOWER_PASSWORD=admin
 
-#=======================================
-# REPORT SERVICE - Serviço de Relatórios
-#=======================================
-GEMINI_API_KEY=AI_KEY
-DEEPSEEK_API_KEY=AI_KEY
-REPORT_DB_CONNECTION_STRING=
-REPORT_DB_NAME=
+GEMINI_API_KEY=key
+DEEPSEEK_API_KEY=key
+REPORT_DB_CONNECTION_STRING=mongodb://...
+REPORT_DB_NAME=reports_db
 FINANCES_SERVICE_BASE_URL=http://finances-service:8000
 FINANCES_SERVICE_TRANSACTIONS_ENDPOINT=/api/v1/transactions/
 FINANCES_SERVICE_CATEGORY_ENDPOINT=/api/v1/categories/
 
 #=======================================
-# NOTIFICATION SERVICE - Serviço de Notificação
+# NOTIFICAÇÃO & LOGGING
 #=======================================
-# Configuração do servidor de e-mail (ex: Mailtrap, SendGrid, etc.)
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM=poupeai.notificacoes@gmail.com
@@ -113,9 +79,5 @@ MAIL_FROM_NAME="Poupe.AI"
 MAIL_PORT=1025
 MAIL_SERVER=mailhog
 
-#=======================================
-# LOGGING - Grafana
-#=======================================
-# Credenciais de admin para o Grafana
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
