feat: add core-service on compose

--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,11 @@ KEYCLOAK_DB_PASSWORD=password
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 
+KEYCLOAK_POUPEAI_REALM=poupe-ai
 KEYCLOAK_SERVER_URL=http://keycloak:8080
-KEYCLOAK_ISSUER=http://${IP_ADDRESS}:8080/realms/poupe-ai
-KEYCLOAK_JWKS_URL=http://keycloak:8080/realms/poupe-ai/protocol/openid-connect/certs
-KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/poupe-ai
+KEYCLOAK_ISSUER=http://${IP_ADDRESS}:8080/realms/${KEYCLOAK_POUPEAI_REALM}
+KEYCLOAK_JWKS_URL=http://keycloak:8080/realms/${KEYCLOAK_POUPEAI_REALM}/protocol/openid-connect/certs
+KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/${KEYCLOAK_POUPEAI_REALM}
 KEYCLOAK_AUDIENCE=account
 
 # Listener do Keycloak
@@ -39,7 +40,12 @@ FINANCE_DB=poupeai_finance_db
 FINANCE_DB_USER=finance_user
 FINANCE_DB_PASSWORD=finance_user_password
 
-REDIS_FINANCE_URL=redis://redis:6379/0
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=core_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+
 REDIS_NOTIFICATION_URL=redis://redis:6379/8
 
 #=======================================
@@ -54,13 +60,6 @@ RABBITMQ_ROUTING_KEY=notification.event
 #=======================================
 # SERVIÇOS
 #=======================================
-REPORTS_SERVICE_URL=http://reports-service:8081/api/v1
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_EMAIL=admin@email.com
-DJANGO_SUPERUSER_PASSWORD=admin
-CELERY_FLOWER_USER=admin
-CELERY_FLOWER_PASSWORD=admin
-
 GEMINI_API_KEY=key
 DEEPSEEK_API_KEY=key
 REPORT_DB_CONNECTION_STRING=mongodb://...
