--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,27 +1,5 @@
 name: poupe-ai-production
 
-x-django-common-env: &django-common-env
-  POSTGRES_DB: ${FINANCE_DB}
-  POSTGRES_USER: ${FINANCE_DB_USER}
-  POSTGRES_PASSWORD: ${FINANCE_DB_PASSWORD}
-  POSTGRES_HOST: finances-db
-  POSTGRES_PORT: 5432
-  DATABASE_URL: postgres://${FINANCE_DB_USER}:${FINANCE_DB_PASSWORD}@finances-db:5432/${FINANCE_DB}
-  KEYCLOAK_ISSUER: ${KEYCLOAK_ISSUER}
-  KEYCLOAK_JWKS_URL: ${KEYCLOAK_JWKS_URL}
-  REDIS_URL: ${REDIS_FINANCE_URL}
-  KEYCLOAK_SERVER_URL: ${KEYCLOAK_SERVER_URL}
-  KEYCLOAK_REALM_NAME: "poupe-ai"
-  KEYCLOAK_ADMIN_CLIENT_ID: "poupe-ai-backend"
-  KEYCLOAK_ADMIN_CLIENT_SECRET: ${KEYCLOAK_ADMIN_CLIENT_SECRET}
-  REPORTS_SERVICE_URL: ${REPORTS_SERVICE_URL}
-  RABBITMQ_URL: ${RABBITMQ_URL}
-  RABBITMQ_EXCHANGE_MAIN: ${RABBITMQ_EXCHANGE_MAIN}
-  RABBITMQ_ROUTING_KEY: ${RABBITMQ_ROUTING_KEY}
-  DJANGO_SETTINGS_MODULE: config.settings.local
-  DEBUG: 'true'
-  USE_DOCKER: 'yes'
-
 services:
   # --- BANCOS DE DADOS E CACHE ---
   keycloak-db:
@@ -42,19 +20,19 @@ services:
     networks:
       - poupe-ai-network
 
-  finances-db:
+  core-db:
     image: postgres:17.5-alpine
-    container_name: finances-db-prod
+    container_name: core-db-local
     environment:
-      POSTGRES_DB: ${FINANCE_DB}
-      POSTGRES_USER: ${FINANCE_DB_USER}
-      POSTGRES_PASSWORD: ${FINANCE_DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - finances_data:/var/lib/postgresql/data
+      - core_data:/var/lib/postgresql/data
     ports:
       - "127.0.0.1:5432:5432"
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${FINANCE_DB_USER}", "-d", "${FINANCE_DB}"]
+      test: ["CMD", "pg_isready", "-U", "${DB_USER}", "-d", "${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -165,71 +143,20 @@ services:
       - poupe-ai-network
 
   # --- SERVIÇOS DA APLICAÇÃO ---
-  finances-service:
-    image: franciscopaulinoq/poupeai-finance-service:${SERVICE_TAG}
-    container_name: finances-service-prod
-    command: /start
+  core-service:
+    image: franciscopaulinoq/poupeai-core-service:${SERVICE_TAG}
+    container_name: core-service-local
     environment:
-      <<: *django-common-env
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      INTERNAL_API_KEY: ${INTERNAL_API_KEY}
+      KEYCLOAK_URL: ${KEYCLOAK_SERVER_URL}
+      KEYCLOAK_POUPEAI_REALM: ${KEYCLOAK_REALM}
     depends_on:
-      finances-db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - poupe-ai-network
-
-  finances-celery-worker:
-    image: franciscopaulinoq/poupeai-finance-service:${SERVICE_TAG}
-    container_name: finances-celery-worker-prod
-    command: /start-celeryworker
-    environment:
-      <<: *django-common-env
-    depends_on:
-      finances-db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - poupe-ai-network
-
-  finances-celery-beat:
-    image: franciscopaulinoq/poupeai-finance-service:${SERVICE_TAG}
-    container_name: finances-celery-beat-prod
-    command: /start-celerybeat
-    environment:
-      <<: *django-common-env
-    depends_on:
-      finances-db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - poupe-ai-network
-  
-  finances-celery-flower:
-    image: franciscopaulinoq/poupeai-finance-service:${SERVICE_TAG}
-    container_name: finances-celery-flower-prod
-    command: /start-flower
-    environment:
-      <<: *django-common-env
-      CELERY_FLOWER_USER: ${CELERY_FLOWER_USER}
-      CELERY_FLOWER_PASSWORD: ${CELERY_FLOWER_PASSWORD}
-    ports:
-      - '5555:5555'
-    depends_on:
-      finances-db:
-        condition: service_healthy
-      redis:
+      core-db:
         condition: service_healthy
     restart: unless-stopped
     networks:
